--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">MangaBoo</string>
     <string-array name="navigation_row">
-        <item>Connect</item>
-        <item>Fixtures</item>
-        <item>Table</item>
+        <item>Manga List</item>
+        <item>Library</item>
+        <item>About</item>
     </string-array>
 </resources>
